--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.3.1",
+    "@elysiajs/swagger": "^1.3.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "elysia": "latest",
