--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.1",
+    "@elysiajs/jwt": "^1.3.0",
     "@elysiajs/swagger": "^1.3.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
+    "drizzle-typebox": "^0.3.2",
     "elysia": "latest",
     "eslint": "^9.26.0",
     "pg": "^8.15.6",
