--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "capstone-project",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build:js": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts",
+    "kit:push": "bun drizzle-kit push"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.3.1",
